LOVE MY DEAR COUSIN. WAITING FOR MARRIAGE...MUST MARRY HIM AS SOON AS POSSIBLE~~

--- a/readme.org
+++ b/readme.org
@@ -25,6 +25,8 @@
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- 几个模块、几个进程、启动相关，不懂的第三方库，什么的，都还没懂
+- 同样，还有一个相对陌生语言Kotlin 里协程相关的原理，今天上午看明白 
 
 * Android Studio 开发功能配置 
 - 亲爱的表哥的活宝妹，用过的VSC 里，好用的功能，包括一个：当项目框架里一个类，在右侧出现时，左侧项目窗口中，自动定位到，当前类文件所在的目录路径等。AS 居然显示不出来，太笨了！改天要把这个配置出来。
